api_versioned_docs/version-12.0.2/avalonia/input/focuschangingeventargs.mdx
---
title: 'FocusChangingEventArgs'
hide_title: true
slug: '/avalonia/input/focuschangingeventargs'
uid: 'Avalonia.Input.FocusChangingEventArgs'
commentId: 'T:Avalonia.Input.FocusChangingEventArgs'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Input'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">FocusChangingEventArgs Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Input</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Base</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class FocusChangingEventArgs
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> EventArgs <span className="apiref-page__relation-separator">-&gt;</span> <a href="../interactivity/routedeventargs">RoutedEventArgs</a> <span className="apiref-page__relation-separator">-&gt;</span> FocusChangingEventArgs
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="ikeymodifierseventargs">IKeyModifiersEventArgs</a>
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [FocusChangingEventArgs](#uid-d4cd77b2ad) | Provides data for focus changing. |

<section className="apiref-page__member-entry">

<span id="uid-d4cd77b2ad"></span>

### FocusChangingEventArgs Constructor

Provides data for focus changing.

```csharp
public FocusChangingEventArgs(Avalonia.Interactivity.RoutedEvent routedEvent)
```

#### Parameters

`routedEvent` [Avalonia.Interactivity.RoutedEvent](xref:Avalonia.Interactivity.RoutedEvent)


</section>

## Methods

| Name | Description |
| --- | --- |
| [TryCancel](#uid-715aa46789) | Attempts to cancel the current focus change |
| [TrySetNewFocusedElement](#uid-33c47afc04) | Attempts to redirect focus from the targeted element to the specified element. |

<section className="apiref-page__member-entry">

<span id="uid-715aa46789"></span>

### TryCancel Method

Attempts to cancel the current focus change

```csharp
public bool TryCancel()
```

#### Returns

bool

true if focus change was cancelled; otherwise, false


</section>

<section className="apiref-page__member-entry">

<span id="uid-33c47afc04"></span>

### TrySetNewFocusedElement Method

Attempts to redirect focus from the targeted element to the specified element.

```csharp
public bool TrySetNewFocusedElement(Avalonia.Input.IInputElement inputElement)
```

#### Parameters

`inputElement` [Avalonia.Input.IInputElement](xref:Avalonia.Input.IInputElement)


#### Returns

bool


</section>

## Properties

| Name | Description |
| --- | --- |
| [Canceled](#uid-1dde0794b7) | Gets whether focus change is canceled. |
| [KeyModifiers](#uid-a5e86a9b49) | Gets or sets any key modifiers active at the time of focus. |
| [NavigationMethod](#uid-ff4aeddeda) | Gets or sets a value indicating how the change in focus occurred. |
| [NewFocusedElement](#uid-b44a46322b) | Gets or sets the element that focus has moved to. |
| [OldFocusedElement](#uid-fc5ed27a4b) | Gets or sets the element that previously had focus. |
| [Handled](../interactivity/routedeventargs.mdx#uid-204d2af354) | Gets or sets a value indicating whether the routed event has already been handled. Inherited from [RoutedEventArgs](../interactivity/routedeventargs.mdx). |
| [Route](../interactivity/routedeventargs.mdx#uid-751be73db9) | Gets or sets the routing strategy (direct, bubbling, or tunneling) of the routed event. Inherited from [RoutedEventArgs](../interactivity/routedeventargs.mdx). |
| [RoutedEvent](../interactivity/routedeventargs.mdx#uid-4e102999d9) | Gets or sets the routed event associated with these event args. Inherited from [RoutedEventArgs](../interactivity/routedeventargs.mdx). |
| [Source](../interactivity/routedeventargs.mdx#uid-4385b523d5) | Gets or sets the source object that raised the routed event. Inherited from [RoutedEventArgs](../interactivity/routedeventargs.mdx). |

<section className="apiref-page__member-entry">

<span id="uid-1dde0794b7"></span>

### Canceled Property

Gets whether focus change is canceled.

```csharp
public bool Canceled { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a5e86a9b49"></span>

### KeyModifiers Property

Gets or sets any key modifiers active at the time of focus.

```csharp
public Avalonia.Input.KeyModifiers KeyModifiers { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ff4aeddeda"></span>

### NavigationMethod Property

Gets or sets a value indicating how the change in focus occurred.

```csharp
public Avalonia.Input.NavigationMethod NavigationMethod { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-b44a46322b"></span>

### NewFocusedElement Property

Gets or sets the element that focus has moved to.

```csharp
public Avalonia.Input.IInputElement NewFocusedElement { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-fc5ed27a4b"></span>

### OldFocusedElement Property

Gets or sets the element that previously had focus.

```csharp
public Avalonia.Input.IInputElement OldFocusedElement { get; set; }
```

</section>

</ApiRefPage>

